Fixes WEB-1273 misaligned in Touchless for Windows.

--- a/static/guiders-js/guiders.css
+++ b/static/guiders-js/guiders.css
@@ -80,7 +80,7 @@
   font-size: 16px;
   margin-left: 6px;
   min-width: 40px;
-  padding: 12px 40px;
+  padding: 12px 35px;
   text-align: center;
   text-decoration: none;
 }
